--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~48.0.15",
     "expo-checkbox": "~2.3.1",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.2",
@@ -25,6 +26,7 @@
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-picker": "^5.6.1",
     "react-native-pager-view": "6.1.2",
     "react-native-safe-area-context": "4.5.0",
