--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-animatable": "^1.3.3",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-image-picker": "^5.6.1",
+    "react-native-maps": "^1.7.1",
     "react-native-pager-view": "6.1.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
