--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/datetimepicker": "^7.4.2",
+    "@react-native-picker/picker": "^2.5.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "axios": "^1.5.0",
     "expo": "~48.0.15",
     "expo-checkbox": "~2.3.1",
     "expo-font": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "~12.1.2",
+    "expo-location": "~15.1.1",
     "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
