--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-picker": "^5.6.1",
     "react-native-maps": "^1.7.1",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-pager-view": "6.1.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
