--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-picker": "^5.6.1",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-maps": "^1.7.1",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-pager-view": "6.1.2",
