--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-pager-view": "6.1.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-secure-storage": "^0.1.2",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.2",
