--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.3",
-    "@react-native-community/datetimepicker": "^7.4.2",
-    "@react-native-picker/picker": "^2.5.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -27,13 +27,13 @@
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.14",
     "react-native-animatable": "^1.3.3",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-picker": "^5.6.1",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-maps": "^1.7.1",
+    "react-native-maps": "1.3.2",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-pager-view": "6.1.2",
     "react-native-safe-area-context": "4.5.0",
